<resources>
    <string name="app_name">FeenixUser</string>

    <!--Permission Messages-->
    <string name="permission_title">Allow permissions?</string>
    <string name="allow_label">Allow</string>
    <string name="dont_allow_label">Don\'t Allow</string>

    <string name="location_permission_msg">You have not given Feenix access to the location on your device. Change it in the settings.</string>
    <string name="bg_location_permission_msg">You have not given Feenix access to the location on your device. \nAllow us to access your location <b>all the time</b>. Change it in the settings.</string>
    <string name="push_notification_permission_msg">You have not given Feenix access to the push notifications on your device. Change it in the settings.</string>
    <string name="call_permission_msg">You have not given Feenix access to make calls on your device. Change it in settings.</string>


    <!--     Internt Message-->
    <string name="no_internet_connection">Please check your internet connection and try again</string>
    <string name="internet_available">Back Online</string>
    <string name="internet_lost">Internet Connection Lost</string>
    <string name="internet_connection_status_good">Good</string>
    <string name="internet_connection_status_moderate">Moderate</string>
    <string name="internet_connection_status_poor">Poor</string>
    <string name="internet_connection_status_none">None</string>
    <string name="no_internet">No Internet</string>
    <string name="intercom_try_again">Dismiss</string>
    <string name="please_check_your_internet_n_connection">Please check your internet\n connection</string>
    <string name="get_started">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    SignIn Module -->
    <string name="txt_login_header">This number will be used for ride-related \n communication</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="please_wait">Please Wait</string>
    <string name="we_will_auto_verify_the_otp_sent_to">We will auto verify the OTP sent to</string>
    <string name="did_receive_otp">Didn\'t receive OTP?</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="or">or</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="email_id">Email Id</string>
    <string name="enter_email">Enter Email</string>
    <string name="associate_number">There are Multiple accounts associated with \nthis Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <!--    Home Menus-->
    <string name="user_name">User Name</string>
    <string name="view_profile">View Profile</string>
    <string name="your_trip">Your Trips</string>
    <string name="community">Community</string>
    <string name="wallet">Wallet</string>
    <string name="coupon">Promotions</string>
    <string name="notifications">Notifications</string>
    <string name="refer_and_earn">Refer and earn</string>
    <string name="help_desk">Help</string>
    <string name="log_out">Log out</string>

    <string name="base_price">Base Fare</string>
    <string name="min_price">Minimum Price</string>
    <string name="per_km">Per Kilometer</string>
    <string name="per_minute">Time</string>
    <string name="search_driver">Searching for drivers…</string>
    <string name="cancel">Cancel</string>
    <string name="call_driver">Call Driver</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


    <!--    Profile-->

    <string name="profile">Profile</string>
    <string name="tab">tab</string>


    <!--    YourTrips-->
    <string name="no_upcoming">No rides yet</string>
    <string name="money_symbols">GH₵</string>
    <string name="you_don_t_have_any_completed_rides_with_feenix_n_to_show_take_your_first_ride_today">You don\'t have any completed rides with feenix \n to show. Take your first ride today!</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="invoice_total">Invoice Total</string>
    <string name="tax">Tax</string>
    <string name="time_fare">Time Fare</string>
    <string name="time_taken">Time Taken</string>
    <string name="distance_fare">Distance Fare</string>
    <string name="distance_travelled">Distance travelled</string>
    <string name="booking_id">Booking ID</string>
    <string name="receipt">Receipt</string>

    <!--    Wallet-->
    <string name="money_in_wallet">Wallet Balance</string>
    <string name="add_money">Add Money</string>
    <string name="enter_amount">Enter amount</string>
    <string name="add_wallet_amt">Add wallet amount</string>
    <string name="no_transaction_found">No Transaction Found</string>
    <string name="mobile_money">Mobile Money</string>
    <string name="card">Card Payment</string>

    <string name="rs_100">GH₵10</string>
    <string name="rs_200">GH₵20</string>
    <string name="rs_500">GH₵30</string>
    <string name="rs_400">GH₵40</string>

    <!--    Promocodes-->

    <string name="promo_added_successfully">Promo Code Added Successfully</string>

    <!--    ReferAndEarn-->

    <string name="reference_code">Reference Code</string>
    <string name="share_content">A new way of moving around is here. First ride hailing app that supports charity with each ride. Let your next trip to town mean much more. Download now to get affordable rates and offers. https://bit.ly/2uk7F4Z  Use this referral Code:  </string>


    <!--    Common Datas-->


    <string name="ACCOUNT_KIT_CLIENT_TOKEN">3887da82c6cd955afde463e194944a70</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="FACEBOOK_APP_ID">483981515671355</string>
    <!--Locations -->
    <string name="location_services_permission_title">Location Services</string>
    <string name="salto_location_services_permission_msg">You have to enable Location Services </string>
    <string name="go_to_settings_label">Go to Settings</string>
    <string name="bg_location_title">Location Access Settings</string>
    <string name="bg_location_user_consent_msg">Allow us to access your location  <b>all the time</b> so that you will be able to receive alarm in case the app is closed or not in use</string>
    <string name="beacon_location_services_permission_msg">You have to enable Location Services for Ride</string>

    <string name="location_disclosure_title">Location Access</string>
    <string name="location_disclosure_content">Feenix User App uses location to get your current location for Ride booking purposes. when the app is closed or not in use</string>


    <!--Alert Dialog -->
    <string name="dialog_warning_title">Warning</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_settings">Settings</string>
    <string name="dialog_info_title">Info</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_continue">Continue</string>


    <!--    Booking Modules-->


    <string name="moto_taxi">Taxi</string>
    <string name="moto_frete">Delivery</string>

    <string name="service_type_model">Service Type Model</string>
    <string name="eta">ETA</string>
    <string name="schedule">Schedule</string>
    <string name="estimated_price">Estimated Fare </string>
    <string name="book_now">Book Now</string>

    <string name="search_location">Search Location</string>
    <string name="confirm">Confirm</string>

    <string name="card_payment_type">Card</string>
    <string name="save_for_future">Save For Future</string>
    <string name="save_this_address">Save This Address for future use</string>
    <string name="drag_map_or_edit_your_address_to_set_your_pickup_spot">Drag map or edit your address to set your pickup spot</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="ordered_by">Booked by Mistake</string>
    <string name="hailed_another">Hailed another Cab</string>
    <string name="no_drivers">No Drivers Available</string>
    <string name="enable_label">Enable</string>

    <string name="general_network_error">An unknown error has occurred. Please try again.</string>
    <string name="push_notification_error">An unknown error has occurred while connecting to notification services. Please try again</string>

    <!--AcceptModuld-->

    <string name="dirver_accepeted_request">Driver has accepted the request</string>
    <string name="driver_on_the_way">Driver on the way</string>
    <string name="driver_arrived">Driver arrived to your place</string>
    <string name="picked_up">Ride has started</string>
    <string name="dropped">Ride has been completed</string>
    <string name="invoice_header">Invoice</string>
    <string name="change_payment">Change</string>
    <string name="enter_comments">Enter Comments</string>
    <string name="minimum_fare">Minimum Fare</string>


    <string name="emergency_assistance">Emergency Assistance</string>
    <string name="share_ride_details">Share Ride Details</string>
    <string name="sharing_ride_details">Sharing Ride Details</string>

</resources>