<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/permission_alert_dialog_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/permission_title"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/permission_alert_dialog_content_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/text_color"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingBottom="20dp"
        android:weightSum="2">

        <Button
            android:id="@+id/permission_alert_dialog_negative_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/app_theme_btn_bg"
            android:text="@string/dont_allow_label"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:theme="@style/AppThemeButton" />


        <Button
            android:id="@+id/permission_alert_dialog_positive_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/app_theme_btn_bg"
            android:text="@string/allow_label"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:theme="@style/AppThemeButton" />


    </LinearLayout>

</LinearLayout>