<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:id="@+id/details_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/noti_icons"
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_no_internet"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/titleText"
                fontPath="fonts/CircularStd-Medium.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/duplex"
                android:gravity="center"
                android:text="@string/no_internet"
                android:textColor="@color/black"
                android:textSize="@dimen/primary_txt1"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/notifcationText"
                fontPath="fonts/Graphik-Regular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/lite"
                android:text="@string/please_check_your_internet_n_connection"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/semismall_txt"
                tools:ignore="MissingPrefix" />


            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <Button
                    android:id="@+id/dismissButton"
                    fontPath="fonts/CircularStd-Medium.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_rect_primary"
                    android:text="@string/intercom_try_again"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/primary_txt1"
                    tools:ignore="MissingPrefix" />

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>
