<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/img_close"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:foreground="@drawable/ripple"
                android:padding="13dp"
                android:src="@drawable/ic_close_black"
                tools:ignore="UnusedAttribute,VectorDrawableCompat" />


            <TextView
                fontPath="fonts/CircularStd-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="Topup wallet"
                android:textColor="@color/black"
                android:textSize="@dimen/default_txt1"
                tools:ignore="HardcodedText,MissingPrefix" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="@dimen/secondary"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/duplex"
            android:background="@drawable/bg_edittext_unselected"
            android:orientation="horizontal"
            android:padding="@dimen/extra_lite">

            <TextView
                fontPath="fonts/CircularStd-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/mini"
                android:padding="3dp"
                android:text="@string/money_symbols"
                android:textColor="@color/black"
                android:textSize="@dimen/primary_txt"
                tools:ignore="MissingPrefix" />

            <EditText
                android:id="@+id/walletInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="Enter Amount"
                android:inputType="number"
                android:maxLength="5"
                android:padding="@dimen/primary"
                android:textColor="@color/black"
                android:textColorHint="#C5C5C5"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:weightSum="4">


                <Button
                    android:id="@+id/hundred_amount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/mini"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edittext_unselected"
                    android:padding="3dp"
                    android:text="@string/rs_100"
                    android:textColor="#687185"
                    android:textSize="@dimen/semismall_txt"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/two_hundred_amount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edittext_unselected"
                    android:padding="3dp"
                    android:text="@string/rs_200"
                    android:textColor="#687185"
                    android:textSize="@dimen/semismall_txt"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/five_hundred_amount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edittext_unselected"
                    android:padding="3dp"
                    android:text="@string/rs_500"
                    android:textColor="#687185"
                    android:textSize="@dimen/semismall_txt"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/four_hundred_amount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edittext_unselected"
                    android:padding="3dp"
                    android:text="@string/rs_400"
                    android:textColor="#687185"
                    android:textSize="@dimen/semismall_txt"
                    tools:ignore="ButtonStyle" />


            </LinearLayout>

            <Button
                android:id="@+id/addMoney"
                fontPath="fonts/CircularStd-Medium.ttf"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="@dimen/primary"
                android:layout_marginTop="@dimen/lite"
                android:layout_marginEnd="@dimen/primary"
                android:layout_marginBottom="@dimen/secondary"
                android:background="@drawable/bg_home_btn"
                android:padding="@dimen/lite"
                android:text="Topup"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/secondary_txt"
                tools:ignore="HardcodedText,MissingPrefix" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
