<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_margin="@dimen/primary"
    android:background="@drawable/bg_invoice_details"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/primary"
        android:layout_marginTop="@dimen/normal"
        android:layout_marginEnd="@dimen/primary"
        android:layout_marginBottom="@dimen/normal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                fontPath="fonts/Graphik-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/base_price"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/basePrice"
                fontPath="fonts/Graphik-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="$100"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="MissingPrefix" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_minimumfare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                fontPath="fonts/Graphik-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/minimum_fare"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/lbl_minimumfare"
                fontPath="fonts/Graphik-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="$100"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="MissingPrefix" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_label_time"
                fontPath="fonts/Graphik-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/time_fare"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/lblTimeFare"
                fontPath="fonts/Graphik-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="$100"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="MissingPrefix" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                fontPath="fonts/Graphik-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/time_taken"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/txt_timetaken"
                fontPath="fonts/Graphik-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="$100"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="MissingPrefix" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                fontPath="fonts/Graphik-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/distance_fare"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/distancePrice"
                fontPath="fonts/Graphik-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="$100"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="MissingPrefix" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                fontPath="fonts/Graphik-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="Trip Distance"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/distanceTaken"
                fontPath="fonts/Graphik-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="$100"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="MissingPrefix" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>